<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/chartFragment"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/chart" />
    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/transactions" />
    <item
        android:id="@+id/saveFragment"
        android:icon="@drawable/ic_save"
        android:title="@string/save"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

</menu>
