<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.transaction.InsertExpenseActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:src="@drawable/insert_expense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_income" />

            <EditText
                android:id="@+id/editTextWriteMemoExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:padding="10dp"
                android:background="@drawable/edit_text_rounded"
                android:inputType="textPersonName"
                android:hint="@string/shopping"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/write_a_memo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/enter_amount"

                app:layout_constraintStart_toStartOf="@id/editTextAmountExpense"
                app:layout_constraintTop_toBottomOf="@id/editTextWriteMemoExpense" />

            <EditText
                android:id="@+id/editTextAmountExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:hint="@string/amount_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonAddExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:background="@drawable/btn_expenses"
                android:text="@string/add"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textColor="@color/textColorWhite"
                app:layout_constraintEnd_toEndOf="@id/editTextAmountExpense"
                app:layout_constraintTop_toBottomOf="@id/editTextAmountExpense" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>